[Block] Fixed z-index

--- a/www/styles/components/_slider-page.scss
+++ b/www/styles/components/_slider-page.scss
@@ -56,7 +56,7 @@
   &:after,
   &:before {
     content: '';
-    z-index: 9999;
+    z-index: 1;
     position: absolute;
     top: 46px;
     height: 66px;
